--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -378,6 +378,8 @@ article iframe { width: 100% !important; }
 .articleShareBox { position: relative; top: -1px; left: -355px; background: #fffcbc; display: inline-block; width: 65px; padding: 10px 2px; border-top: 1px solid #808080; border-left: 1px solid #808080; border-bottom: 1px solid #808080; }
 .articleShareBox .title { display: inline-block; width: 40px; line-height: 20px; margin-bottom: 15px; }
 
+.snsbox iframe { z-index: 9999 !important; }
+
 footer { margin-top: 15px; z-index: 0; background: #404040; border-top: 5px solid #ffb301; }
 footer p { color: #ccc; font-size: 14px; padding-top: 10px; padding-bottom: 30px; line-height: 25px; }
 footer p a:link, footer p a:visited { color: #ccc; margin-right: 6px; text-decoration: underline; }
